<resources>
    <string name="app_name">ARcast</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>

    <string name="menu_browse">Browse</string>
    <string name="menu_draw">Draw your own!</string>
    <string name="menu_slideshow">Slideshow</string>

    <string name="canvasContentDescription">Pretty cool app for drawing and uploading!</string>
    <string name="email">Email</string>
    <string name="password">Password</string>
    <string name="login">Login</string>
    <string name="register">Register</string>
    <string name="back">Back</string>
    <string name="sign_up">Sign up!</string>
    <string name="sign_out">Sign Out</string>
    <string name="image_of_drawing">Image of Drawing</string>
    <string name="save_amp_upload"><![CDATA[Save & Upload]]></string>
    <string name="about">About</string>
    <string name="rainy_inc_no_rights_reserved">Rainy Inc. No rights reserved</string>
    <string name="camera">Camera</string>
    <string name="arcast_logo">ARcast logo</string>
</resources>