<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn="navigation_view">

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/nav_browse"
            android:icon="@drawable/icons8_medium_icons_64"
            android:title="@string/menu_browse" />
        <item
            android:id="@+id/nav_draw"
            android:icon="@drawable/icons8_paint_palette_64"
            android:title="@string/menu_draw" />
        <item
            android:id="@+id/nav_camera"
            android:icon="@drawable/icons8_camera_64"
            android:title="@string/camera" />
        <item
            android:id="@+id/nav_about"
            android:icon="@drawable/icons8_info_64"
            android:title="@string/about" />
    </group>
</menu>